[gd_scene load_steps=3 format=2]

[ext_resource path="res://UI/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://UI/DefaultTheme.tres" type="Theme" id=2]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer"]
margin_left = 122.0
margin_top = 44.0
margin_right = 197.0
margin_bottom = 115.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/HBoxContainer"]
margin_right = 75.0
margin_bottom = 71.0

[node name="Start" type="Button" parent="CenterContainer/HBoxContainer/VBoxContainer"]
margin_right = 75.0
margin_bottom = 21.0
mouse_default_cursor_shape = 2
text = "START"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HowToPlay" type="Button" parent="CenterContainer/HBoxContainer/VBoxContainer"]
margin_top = 25.0
margin_right = 75.0
margin_bottom = 46.0
mouse_default_cursor_shape = 2
text = "HOW TO PLAY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Info" type="Button" parent="CenterContainer/HBoxContainer/VBoxContainer"]
margin_top = 50.0
margin_right = 75.0
margin_bottom = 71.0
mouse_default_cursor_shape = 2
text = "ABOUT"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="CenterContainer/HBoxContainer/VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/VBoxContainer/HowToPlay" to="." method="_on_HowToPlay_pressed"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/VBoxContainer/Info" to="." method="_on_Info_pressed"]
